// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="TournamentSettings-root-65"
>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 MuiFormControl-fullWidth-70 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-marginDense-73"
      data-shrink={false}
      htmlFor="tournament-name"
    >
       Name
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={false}
        className="MuiInput-input-89 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 MuiFormControl-fullWidth-70 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-marginDense-73"
      data-shrink={false}
      htmlFor="tournament-description"
    >
      Description
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-89 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-description"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="css-10nd86i TournamentSettings-field-66"
    id="tournament-category"
    onKeyDown={[Function]}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-67 MuiFormControl-fullWidth-70"
    >
      <label
        className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74"
        data-shrink={true}
        htmlFor={undefined}
      >
        Category
      </label>
      <div
        className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
      >
        <div
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-89 IntegrationReactSelect-input-95"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value={undefined}
        >
          <div
            className="IntegrationReactSelect-valueContainer-96"
          >
            <p
              className="MuiTypography-root-104 MuiTypography-body1-113 MuiTypography-colorTextSecondary-127 IntegrationReactSelect-placeholder-101"
            >
              Select or Type...
            </p>
            <div
              className="css-1hrkh7z"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className={undefined}
                  disabled={false}
                  id="react-select-5-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74 MuiInputLabel-marginDense-73"
      data-shrink={true}
      htmlFor="tournament-date"
    >
      Date
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-89 MuiInput-inputType-92 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-date"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="date"
        value=""
      />
    </div>
  </div>
  <div
    className="css-10nd86i TournamentSettings-field-66"
    id="tournament-pairingMethod"
    onKeyDown={[Function]}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-67 MuiFormControl-fullWidth-70"
    >
      <label
        className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74"
        data-shrink={true}
        htmlFor={undefined}
      >
        Pairing Method
      </label>
      <div
        className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
      >
        <div
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-89 IntegrationReactSelect-input-95"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value={undefined}
        >
          <div
            className="IntegrationReactSelect-valueContainer-96"
          >
            <p
              className="MuiTypography-root-104 MuiTypography-body1-113 MuiTypography-colorTextSecondary-127 IntegrationReactSelect-placeholder-101"
            >
              Select...
            </p>
            <div
              className="css-1hrkh7z"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className={undefined}
                  disabled={false}
                  id="react-select-6-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-10nd86i TournamentSettings-field-66"
    id="tournament-pairingMethodInitial"
    onKeyDown={[Function]}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-67 MuiFormControl-fullWidth-70"
    >
      <label
        className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74"
        data-shrink={true}
        htmlFor={undefined}
      >
        Initial Pairing Method
      </label>
      <div
        className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
      >
        <div
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-89 IntegrationReactSelect-input-95"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value={undefined}
        >
          <div
            className="IntegrationReactSelect-valueContainer-96"
          >
            <p
              className="MuiTypography-root-104 MuiTypography-body1-113 MuiTypography-colorTextSecondary-127 IntegrationReactSelect-placeholder-101"
            >
              Select...
            </p>
            <div
              className="css-1hrkh7z"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className={undefined}
                  disabled={false}
                  id="react-select-7-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74 MuiInputLabel-marginDense-73"
      data-shrink={true}
      htmlFor="tournament-podSizeMinimum"
    >
      Minimum Pod Size
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-89 MuiInput-inputType-92 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-podSizeMinimum"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="number"
        value={0}
      />
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74 MuiInputLabel-marginDense-73"
      data-shrink={true}
      htmlFor="tournament-podSizeMaximum"
    >
      Maximum Pod Size
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-89 MuiInput-inputType-92 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-podSizeMaximum"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="number"
        value={0}
      />
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="TournamentSettings-root-65"
>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 MuiFormControl-fullWidth-70 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74 MuiInputLabel-marginDense-73"
      data-shrink={true}
      htmlFor="tournament-name"
    >
       Name
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={false}
        className="MuiInput-input-89 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-name"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="text"
        value="test0"
      />
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 MuiFormControl-fullWidth-70 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74 MuiInputLabel-marginDense-73"
      data-shrink={true}
      htmlFor="tournament-description"
    >
      Description
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-89 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-description"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="text"
        value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae tellus nunc. Etiam urna tortor, laoreet vitae commodo porttitor, mattis id purus."
      />
    </div>
  </div>
  <div
    className="css-10nd86i TournamentSettings-field-66"
    id="tournament-category"
    onKeyDown={[Function]}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-67 MuiFormControl-fullWidth-70"
    >
      <label
        className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74"
        data-shrink={true}
        htmlFor={undefined}
      >
        Category
      </label>
      <div
        className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
      >
        <div
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-89 IntegrationReactSelect-input-95"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value={undefined}
        >
          <div
            className="IntegrationReactSelect-valueContainer-96"
          >
            <p
              className="MuiTypography-root-104 MuiTypography-body1-113 MuiTypography-colorTextSecondary-127 IntegrationReactSelect-placeholder-101"
            >
              Select or Type...
            </p>
            <div
              className="css-1hrkh7z"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className={undefined}
                  disabled={false}
                  id="react-select-5-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74 MuiInputLabel-marginDense-73"
      data-shrink={true}
      htmlFor="tournament-date"
    >
      Date
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-89 MuiInput-inputType-92 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-date"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="date"
        value={2018-01-01T00:00:00.000Z}
      />
    </div>
  </div>
  <div
    className="css-10nd86i TournamentSettings-field-66"
    id="tournament-pairingMethod"
    onKeyDown={[Function]}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-67 MuiFormControl-fullWidth-70"
    >
      <label
        className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74"
        data-shrink={true}
        htmlFor={undefined}
      >
        Pairing Method
      </label>
      <div
        className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
      >
        <div
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-89 IntegrationReactSelect-input-95"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value={undefined}
        >
          <div
            className="IntegrationReactSelect-valueContainer-96"
          >
            <p
              className="MuiTypography-root-104 MuiTypography-body1-113 MuiTypography-colorTextSecondary-127 IntegrationReactSelect-placeholder-101"
            >
              Select...
            </p>
            <div
              className="css-1hrkh7z"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className={undefined}
                  disabled={false}
                  id="react-select-6-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-10nd86i TournamentSettings-field-66"
    id="tournament-pairingMethodInitial"
    onKeyDown={[Function]}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-67 MuiFormControl-fullWidth-70"
    >
      <label
        className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74"
        data-shrink={true}
        htmlFor={undefined}
      >
        Initial Pairing Method
      </label>
      <div
        className="MuiInput-root-81 MuiInput-fullWidth-88 MuiInput-formControl-82 MuiInput-underline-85"
      >
        <div
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-89 IntegrationReactSelect-input-95"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value={undefined}
        >
          <div
            className="IntegrationReactSelect-valueContainer-96"
          >
            <p
              className="MuiTypography-root-104 MuiTypography-body1-113 MuiTypography-colorTextSecondary-127 IntegrationReactSelect-placeholder-101"
            >
              Select...
            </p>
            <div
              className="css-1hrkh7z"
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-autocomplete="list"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className={undefined}
                  disabled={false}
                  id="react-select-7-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  spellCheck="false"
                  style={
                    Object {
                      "background": 0,
                      "border": 0,
                      "boxSizing": "content-box",
                      "color": "inherit",
                      "fontSize": "inherit",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "1px",
                    }
                  }
                  tabIndex="0"
                  type="text"
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1wy0on6"
          >
            <span
              className="css-d8oujb"
            />
            <div
              aria-hidden="true"
              className="css-1ep9fjw"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-19bqh2r"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74 MuiInputLabel-marginDense-73"
      data-shrink={true}
      htmlFor="tournament-podSizeMinimum"
    >
      Minimum Pod Size
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-89 MuiInput-inputType-92 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-podSizeMinimum"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="number"
        value={3}
      />
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-67 MuiFormControl-marginDense-69 TournamentSettings-field-66"
  >
    <label
      className="MuiFormLabel-root-76 MuiInputLabel-root-71 MuiInputLabel-formControl-72 MuiInputLabel-animated-75 MuiInputLabel-shrink-74 MuiInputLabel-marginDense-73"
      data-shrink={true}
      htmlFor="tournament-podSizeMaximum"
    >
      Maximum Pod Size
      <span
        className="MuiFormLabel-asterisk-80"
      >
         *
      </span>
    </label>
    <div
      className="MuiInput-root-81 MuiInput-formControl-82 MuiInput-underline-85"
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-89 MuiInput-inputType-92 MuiInput-inputMarginDense-90"
        defaultValue={undefined}
        disabled={false}
        id="tournament-podSizeMaximum"
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={true}
        rows={undefined}
        type="number"
        value={4}
      />
    </div>
  </div>
</div>
`;
